test_case/rust-lang_rust/60466_497630098.rs

struct S<T: Debug, const N: usize>([T; N]); //~ ERROR `[T; _]` doesn't implement `std::fmt::Debug`
